--- a/ocgcore.html
+++ b/ocgcore.html
@@ -6,6 +6,7 @@
 	<body>
 		<!-- load lua -->
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+		<script src='js/vendor/mersenne-twister.js'></script>
 		<script src='js/OCGCore/ocgcore_headers.js'></script>
 		<script src='js/OCGCore/ocgcore_methods.js'></script>
 	</body>
