visual and functional upgardes

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <![endif]-->
 
         <div id='wrapper'>
-            <div class="container"   id='login'>
-                <div class="transparent">
+            <div class="container" >
+                <div class="transparent" id='login'>
                     <div class="transparent form-body" >
                         <h1>YGOPro</h1>
                         <h2>DevPro Online</h2>
