--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>DevPro Web Beta</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
 <link href='http://fonts.googleapis.com/css?family=Josefin+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -38,7 +38,7 @@
                     <form id='chatform'> 
                             <input placeholder='Enter text here,...'/>
                             <button type='button'>Send</button>
-                        </form>
+                        </form><span class=usercount></span>
             </div>
 
 
