--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         
         <script src='js\vendor\supersize\core\js\supersized.core.3.2.1.js'></script>
+        <script src='js\vendor\jquery-cookie\jquery.cookie.js'></script>
         <script type="text/javascript">
             
             jQuery(function($){
